# pocket_dimension

./: README.md  README.rst  genindex.html  help.html  index.html  license.html  modules.html  objects.inv  pocket_dimension.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: main.yml
_modules/: index.html
_modules/pocket_dimension/: random_projection.html  vectorizer.html
_modules/tests/: test_pocket_dimension.html
_sources/: help.rst.txt  modules.rst.txt  pocket_dimension.rst.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  license.rst  modules.rst  pocket_dimension.rst
pocket_dimension/: __init__.py  pocket_dimension.py  random_projection.py  vectorizer.py
tests/: test_pocket_dimension.py
