[metadata]
name = pocket_dimension
version = attr: pocket_dimension.__version__
url = https://github.com/mhendrey/pocket_dimension
project_urls =
    Source = https://github.com/mhendrey/pocket_dimension
    Documentation = https://mhendrey.github.io/pocket_dimension
author = Matthew Hendrey
author_email= matthew.hendrey@gmail.com
classifiers =
    Programming Language :: Python :: 3
license = GNU GPLv3
description = Memory-efficient, dense, random projection of sparse vectors
long_description = file: README.rst, LICENSE
keywords = numba, random projection, term-frequency, tfidf, dimension reduction

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numba >= 0.55.2
    pybloomfilter >= 0.5.5
    scikit-learn >= 1.1.1
    scipy >= 1.7.3
    sketchnu >= 1.2.0

[options.packages.find]
exclude =
    docs*
    tests
